packages/kit/test/apps/basics/src/routes/errors/endpoint-shadow/+page.server.js
/** @type {import('@sveltejs/kit').RequestHandler} */
export function load() {
	throw new Error('nope');
}
